stop mobiles scrolling to sidebar, make help button appear under title on mobiles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,6 +331,12 @@ body {
     font-size: 1.8rem;
   }
 
+  #help-button {
+    position: static; 
+    display: block;
+    margin: 10px auto; 
+  }
+
   .sub-heading {
     font-size: 1.2em;
   }
